; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_wi_stuff.c_WI_updateShowNextLoc.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_wi_stuff.c_WI_updateShowNextLoc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cnt = common dso_local global i32 0, align 4
@acceleratestage = common dso_local global i64 0, align 8
@snl_pointeron = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @WI_updateShowNextLoc() #0 {
  %1 = call i32 (...) @WI_updateAnimatedBack()
  %2 = load i32, i32* @cnt, align 4
  %3 = add nsw i32 %2, -1
  store i32 %3, i32* @cnt, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i64, i64* @acceleratestage, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %5, %0
  %9 = call i32 (...) @WI_initNoState()
  br label %15

10:                                               ; preds = %5
  %11 = load i32, i32* @cnt, align 4
  %12 = and i32 %11, 31
  %13 = icmp slt i32 %12, 20
  %14 = zext i1 %13 to i32
  store i32 %14, i32* @snl_pointeron, align 4
  br label %15

15:                                               ; preds = %10, %8
  ret void
}

declare dso_local i32 @WI_updateAnimatedBack(...) #1

declare dso_local i32 @WI_initNoState(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
